--- a/final-project/index.html
+++ b/final-project/index.html
@@ -40,7 +40,7 @@
                 </li>
                 <li><a href="brazil.html" title="Brazil Info">Brazil Info</a></li>
                 <li><a href="regions.html" title="Regions">Regions</a></li>
-                <li><a href="favorite.html" title="Favorites">Favorites</a></li>
+                <li><a href="favorites.html" title="Favorites">Favorites</a></li>
             </ul>
         </nav>
         <main>
