Perform usability testing and polish UI

--- a/final-project/brazil.html
+++ b/final-project/brazil.html
@@ -21,12 +21,12 @@
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/menutransition.js" defer></script>
     <script src="scripts/brazil.js" defer></script>
-  </head>
+</head>
 
 <body>
     <div id="content">
         <header>
-            <img src="images/brasil.webp" width="128" height="96" alt="Brasil Flag" />
+            <img src="images/brazil.webp" width="128" height="96" alt="Brazil Flag" />
             <div>
                 <h2>BRAZIL</h2>
                 <h3>Brazil Administrative Divisions</h3>
@@ -47,7 +47,7 @@
                 <div class="map">
                     <picture>
                         <source media="(min-width: 700px)" srcset="images/brazil-regions-sates.webp">
-                        <img src="images/brazil-regions-sates.webp" loading="lazy" alt="Brazil Northeast Region Sights">
+                        <img src="images/brazil-regions-sates.webp" loading="lazy" alt="Brazil Regions States Map">
                     </picture>
                 </div>
                 <div class="info">
@@ -58,7 +58,7 @@
         </main>
         <footer>
             <div class="project-info">
-                <h3>WDD330 Final Project</h3>
+                <p>WDD330 Final Project</p>
                 <p>Rafael Pereira de Souza Castro</p>
                 <p><span id="currentyear"></span> Brazil Administrative Divisions</p>
                 <p id="lastModified"></p>
