--- a/final-project/favorites.html
+++ b/final-project/favorites.html
@@ -26,7 +26,7 @@
 <body>
     <div id="content">
         <header>
-            <img src="images/brasil.webp" width="128" height="96" alt="Brasil Flag" />
+            <img src="images/brazil.webp" width="128" height="96" alt="Brazil Flag" />
             <div>
                 <h2>BRAZIL</h2>
                 <h3>Brazil Administrative Divisions</h3>
@@ -47,7 +47,7 @@
         </main>
         <footer>
             <div class="project-info">
-                <h3>WDD330 Final Project</h3>
+                <p>WDD330 Final Project</p>
                 <p>Rafael Pereira de Souza Castro</p>
                 <p><span id="currentyear"></span> Brazil Administrative Divisions</p>
                 <p id="lastModified"></p>
